--- a/src/components/ParallaxSection/parallaxSection.module.css
+++ b/src/components/ParallaxSection/parallaxSection.module.css
@@ -1,9 +1,11 @@
 .parallax {
     position: relative;
     height: 100vh;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 100px;
 }
 
 .parallax img {
